# asdm

./: .gitignore  Cargo.toml  README.md
src/: console.rs  core.rs  main.rs  utils.rs
src/modules/: console.rs  data.rs  install.rs  mod.rs  run.rs  setup.rs
src/settings/: config.toml
