[package]
name = "asdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0.48"
termimad = "0.20.2"
crossterm = "0.23.2"
chrono = "0.4.19"